# music_recsys_vk_tt

./: .gitignore  Readme.md  pyproject.toml
app/sandbox/: ALS training.ipynb  NCF training.ipynb  eda.ipynb  top_items_baseline.ipynb  training.ipynb
app/src/: config.py  exctract_zip.py  main.py  recommenders.py  train_ncf.py  train_u2i_als.py  utils.py
app/src/examples/: als_example.py  ncf_example.py
